ajustes em algumas linhas do código

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="checkbox-container">
                 <div class="checkbox-wrapper">
                     <input type="checkbox" id="toggle">
-                    <label type="checkbox" for="toggle">
+                    <label class="checkbox" for="toggle">
                         <div class="trace"></div>
                         <div class="trace"></div>
                         <div class="trace"></div> 
