--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles.css" rel="stylesheet" type="text/css"/>
     <title>Pedro Carneiro</title>
@@ -16,7 +17,7 @@
                         <div class="trace"></div>
                         <div class="trace"></div>
                         <div class="trace"></div> 
-                        </label>
+                    </label>
                     <div class="menu">
                         <nav class="menu-items">
                             <ul>
@@ -42,6 +43,44 @@
             <a target="_blank" rel="noopener noreferrer" href = "https://github.com/pedrocarneiro11">Github</a>
             <a target="_blank" rel="noopener noreferrer" href = "https://www.instagram.com/pedro_carneiro_/">Instagram</a>
         </div>
-    </header>       
+    </header>
+    <main class="container">
+        <div class="card-container">
+            <div class="card-text">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus hic, quasi eaque, assumenda itaque, similique consectetur dolore non quam quia ea magni iusto nesciunt eos aperiam provident animi enim nisi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore hic sint sed quia omnis odit, voluptate debitis recusandae modi fugiat, iusto illo id voluptatem nam enim facere ex, repellendus nostrum.
+            </div>
+            <div class="card">
+                <div class="card-wrapper">
+                    <h2>Github</h2>
+                    <a href="https://github.com/pedrocarneiro11" target="_blank">Veja meus projetos</a>
+                </div>
+            </div>
+        </div>
+        <div class="card-container">
+            <div class="card">
+                <div class="card-wrapper">
+                    <h2>Linkedin</h2>
+                    <a href="https://www.linkedin.com/in/pedro-carneiro-05192216a/" target="_blank">Acompanhe minha carreira</a>
+                </div>
+            </div>
+            <div class="card-text">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus hic, quasi eaque, assumenda itaque, similique consectetur dolore non quam quia ea magni iusto nesciunt eos aperiam provident animi enim nisi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore hic sint sed quia omnis odit, voluptate debitis recusandae modi fugiat, iusto illo id voluptatem nam enim facere ex, repellendus nostrum.
+            </div>
+        </div>
+        <div class="card-container">
+            <div class="card-text">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus hic, quasi eaque, assumenda itaque, similique consectetur dolore non quam quia ea magni iusto nesciunt eos aperiam provident animi enim nisi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore hic sint sed quia omnis odit, voluptate debitis recusandae modi fugiat, iusto illo id voluptatem nam enim facere ex, repellendus nostrum.
+            </div>
+            <div class="card">
+                <div class="card-wrapper">
+                    <h2>Instagram</h2>
+                    <a href="https://www.instagram.com/pedro_carneiro_/" target="_blank">Veja meu dia-a-dia</a>
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer class="footer">
+        Feito por Pedro Carneiro
+    </footer>    
 </body>
 </html>
