--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="styles.css" rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" href="styles.css">
     <title>Pedro Carneiro</title>
 </head>
 <body>
@@ -16,23 +16,22 @@
                     <label class="checkbox" for="toggle">
                         <div class="trace"></div>
                         <div class="trace"></div>
-                        <div class="trace"></div> 
+                        <div class="trace"></div>
                     </label>
-                    <div class="menu">
+                    <div class="menu"></div>
                         <nav class="menu-items">
                             <ul>
-                                <li>
-                                    <a href="#">Home</a>    
+                                <li>                                
+                                    <a href="#">Home</a>
                                 </li>
                                 <li>
                                     <a href="#">Sobre</a>
                                 </li>
                                 <li>
-                                    <a href="#">Projetos</a>                                    
+                                    <a href="#">Projetos</a>
                                 </li>
                             </ul>
                         </nav>
-                    </div>
                 </div>
             </div>
         </div>
@@ -81,6 +80,7 @@
     </main>
     <footer class="footer">
         Feito por Pedro Carneiro
-    </footer>    
+    </footer>
 </body>
+
 </html>
