--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="card">
                 <div class="card-wrapper">
                     <h2>Instagram</h2>
-                    <a href="https://www.instagram.com/pedro_carneiro_/" target="_blank">Veja meu dia-a-dia</a>
+                    <a href="https://www.instagram.com/pedro_carneiro_/" target="_blank">Veja meu dia-a-dia :)</a>
                 </div>
             </div>
         </div>
