--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
     <main class="container">
         <div class="card-container">
             <div class="card-text">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus hic, quasi eaque, assumenda itaque, similique consectetur dolore non quam quia ea magni iusto nesciunt eos aperiam provident animi enim nisi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore hic sint sed quia omnis odit, voluptate debitis recusandae modi fugiat, iusto illo id voluptatem nam enim facere ex, repellendus nostrum.
+                Olá, meu nome é Pedro Carneiro, nasci em Recife no ano de 1998, sou desenvolvedor Front End, com noções de Back End. Gosto muito de sair, de jogar videogame, de ir para a academia, de programação, e estou sempre em busca de novos desafios, tentando sempre me aprimorar pessoalmente e profissionalmente
             </div>
             <div class="card">
                 <div class="card-wrapper">
                     <h2>Github</h2>
-                    <a href="https://github.com/pedrocarneiro11" target="_blank">Veja meus projetos</a>
+                    <a href="https://github.com/pedrocarneiro11" target="_blank">Veja meus projetos!</a>
                 </div>
             </div>
         </div>
@@ -63,12 +63,12 @@
                 </div>
             </div>
             <div class="card-text">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus hic, quasi eaque, assumenda itaque, similique consectetur dolore non quam quia ea magni iusto nesciunt eos aperiam provident animi enim nisi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore hic sint sed quia omnis odit, voluptate debitis recusandae modi fugiat, iusto illo id voluptatem nam enim facere ex, repellendus nostrum.
+                Iniciei a minha trajetória profissional na área de engenharia civil, e cheguei a estagiar em obras de construção e reforma, porém, acabei me identificando mais com a programação e com a área de tecnologia, então decidi me tornar programador, buscando sempre me atualizar e aprender o máximo possível sobre esta brilhante área! 
             </div>
         </div>
         <div class="card-container">
             <div class="card-text">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus hic, quasi eaque, assumenda itaque, similique consectetur dolore non quam quia ea magni iusto nesciunt eos aperiam provident animi enim nisi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore hic sint sed quia omnis odit, voluptate debitis recusandae modi fugiat, iusto illo id voluptatem nam enim facere ex, repellendus nostrum.
+                Sou um rapaz dedicado, resiliente, gosto de trabalhar em equipe, gosto de conhecer pessoas novas, culturas novas, e estou sempre à procura de novos desafios!
             </div>
             <div class="card">
                 <div class="card-wrapper">
