--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
                         <nav class="menu-items">
                             <ul>
                                 <li>                                
-                                    <a href="#">Home</a>
+                                    <a id ="home" href="index.html">Home</a>
                                 </li>
                                 <li>
-                                    <a href="#">Sobre</a>
+                                    <a id="sobre" href="#">Sobre</a>
                                 </li>
                                 <li>
-                                    <a href="#">Projetos</a>
+                                    <a target="_blank" rel="noopener noreferrer" href="https://github.com/pedrocarneiro11">Projetos</a>
                                 </li>
                             </ul>
                         </nav>
